--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <script type="text/javascript" src="temperature.js"></script>
   </head>
   <body>
-    <h1>Conversor de Temperaturas</h1>
+    <h1>Conversor de Temperaturas Mejorado</h1>
     <table>
       <tr>
         <th>Introduzca la temperatura a convertir (ejemplo: 32F, 45C, -2.5f):</th>
