--- a/tests/index.html
+++ b/tests/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="mocha"></div>
-    <input id="original" placeholder="32F" size="50">
+    <input id="original" name="ini_temp" placeholder="32F" size="50">
     <span class="output" id="converted"></span>
     <script src="chai.js"></script>
     <script src="mocha.js"></script>
