Cambiando estructura del .js, añadiendo tests BDD

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table>
       <tr>
         <th>Introduzca la temperatura a convertir (ejemplo: 32F, 45C, -2.5f):</th>
-        <td><input id="original" name="ini_temp" autofocus onchange="calculate();" placeholder="32F" size="50"></td>
+        <td><input id="inicial" name="temp" autofocus onchange="calculate();" placeholder="32F" size="50"></td>
       </tr>
       <tr>
         <th>Temperatura convertida:</th>
